Enable guess you like page

--- a/server/d1/vine_comment/templates/comments/comment_list.html
+++ b/server/d1/vine_comment/templates/comments/comment_list.html
@@ -46,11 +46,11 @@
 </div>
 
 <div id="iTinkYouLike"	style="display: none;">
-	<button id="change" type="button" class = 'btn btn-info' style="float:right" onclick="reload_tagmsg();">换一批</button>
+	<!--button id="change" type="button" class = 'btn btn-info' style="float:right" onclick="reload_tagmsg();">换一批</button-->
 	<!-- TODO ADD reload JS-->
 	<br>
 	<div id="tagmsg">
-		{% include 'comments_tag_raw.html' %}
+		{% include 'comments/comments_you_like.html' %}
 	</div>
 </div>
 
