update activation complete html

--- a/server/d1/d1/templates/registration/activation_complete.html
+++ b/server/d1/d1/templates/registration/activation_complete.html
@@ -1,8 +1,8 @@
 {% extends "registration/base.html" %}
 
-{% block title %}Activation complete{% endblock %}
+{% block title %}激活成功！{% endblock %}
 
 {% block content %}
-<h1>Congratulations!</h1>
-<p>Your registration is now complete. Go to the site and start having fun!</p>
+<h1>恭喜！</h1>
+<p>请访问<a href='/'>主站</a></p>
 {% endblock %}
