--- a/server/d1/vine_comment/templates/comments/comment_list.html
+++ b/server/d1/vine_comment/templates/comments/comment_list.html
@@ -22,13 +22,13 @@
   function reload_tagmsg() 
   {
 
-    $('#commentList').load('/comments/{{url_b64}}/raw');
+    $('#commentList').load('/comments/{{url_b64}}/plug');
 		document.getElementById("commetList").style.display="";
 		document.getElementById("iTinkYouLike").style.display="none";
   }
   function show_you_like()
   {
-    $('#iTinkYouLike').load('/comments/tag/raw');
+    $('#iTinkYouLike').load('/comments/tag/plug');
 		document.getElementById("commetList").style.display="none";
 		document.getElementById("iTinkYouLike").style.display="";
 
@@ -38,18 +38,16 @@
 
 <!-- TODO 百分比  -->
 <style>
-  .test{width:247px;}
+  .left{width:50%;float:left;}
+  .right{margin-left:50%;}
 </style>
 
-<div class='rows' width=100%>
-	<div class='btn-group'>
-		<button id="test1" type="button" class = 'btn btn-info test' style="float:left" onclick="show_comment();">评论</button>
-		<button id="test2" type="button" class = 'btn btn-info test' style="float:right" onclick="show_you_like();">猜你喜欢</button>
-	</div>
+<div class='left'>
+    <button id="test1" type="button" class='btn btn-info btn-block' onclick="show_comment();">评论</button>
 </div>
-
-
-
+<div class='right'>
+    <button id="test2" type="button" class = 'btn btn-info btn-block'   onclick="show_you_like();">猜你喜欢</button>
+</div>
 
 <div id="commetList" style="display:"";">
 		{% include 'comments/comment_list_raw.html' %}
