Modify button css
Right angle

--- a/server/d1/vine_comment/templates/comments/comment_list.html
+++ b/server/d1/vine_comment/templates/comments/comment_list.html
@@ -36,17 +36,17 @@
   
 </script>
 
-<!-- TODO 百分比  -->
 <style>
   .left{width:50%;float:left;}
   .right{margin-left:50%;}
+  .right-angle{border-Radius:0px;}
 </style>
 
 <div class='left'>
-    <button id="test1" type="button" class='btn btn-info btn-block' onclick="show_comment();">评论</button>
+    <button id="test1" type="button" class='btn btn-info btn-block right-angle' onclick="show_comment();">评论</button>
 </div>
 <div class='right'>
-    <button id="test2" type="button" class = 'btn btn-info btn-block'   onclick="show_you_like();">猜你喜欢</button>
+    <button id="test2" type="button" class = 'btn btn-info btn-block right-angle'   onclick="show_you_like();">猜你喜欢</button>
 </div>
 
 <div id="commetList" style="display:"";">
