--- a/server/d1/d1/templates/registration/activate.html
+++ b/server/d1/d1/templates/registration/activate.html
@@ -1,16 +1,14 @@
 {% extends "registration/base.html" %}
 
-{% block title %}Account activated{% endblock %}
+{% block title %}账户成功激活！{% endblock %}
 
 {% block content %}
-  <h1>Account activated.</h1>
+  <h1>你的账户已成功激活。</h1>
   {% load humanize %}
   {% if account %}
-    <p>Thanks for signing up! Now you can <a href="/accounts/login/">log in</a>.</p>
+    <p>感谢你的注册，现在你可以<a href="/accounts/login/">登陆了</a>。</p>
   {% else %}
-    <p>Sorry, it didn't work. Either your activation link was incorrect, or
-    the activation key for your account has expired; activation keys are
-    only valid for {{ expiration_days|apnumber }} days after
-    registration.</p>
+    <p>对不起，你的激活没有成功。可能是激活链接错误，或者你的激活链接已过期。
+    激活链接在{{ expiration_days|apnumber }}天内有效</p>
   {% endif %}
 {% endblock %}
