add Icon and some Background material
add Icon and some Background material

--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -26,8 +26,11 @@
 <body style="padding:5px;">
 
 <div id="commentBoard">
-  <div id="boardRight" >
+  <div id="boardRight">
 		<ul class="nav nav-pills" class="panel panel-default">
+          <li>
+          <img src="//{{ request.META.HTTP_HOST }}{% static 'icons/vine-comment.jpg' %}" />
+          </li>
           <li>
 			<h3>藤蔓评论</h3>
 		  </li>
