--- a/server/d1/d1/templates/registration/login.html
+++ b/server/d1/d1/templates/registration/login.html
@@ -1,27 +1,26 @@
 {% extends "registration/base.html" %}
 
-{% block title %}Log in{% endblock %}
+{% block title %}登陆{% endblock %}
 
 {% block content %}
 
-<h1>Log in</h1>
+<h1>登陆</h1>
 
 {% if form.errors %}
-<p class="error">Please correct the errors below:</p>
+<p class="error">请修复以下的错误</p>
 {% endif %}
 
 <form method="post" action="?next={{ next|default:"/" }}">{% csrf_token %}
 <dl>
-<dt><label for="id_username">Username:</label>{% if form.username.errors %} <span class="error">{{ form.username.errors|join:", " }}</span>{% endif %}</dt>
+<dt><label for="id_username">用户名:</label>{% if form.username.errors %} <span class="error">{{ form.username.errors|join:", " }}</span>{% endif %}</dt>
 <dd>{{ form.username }}</dd>
-<dt><label for="id_password">Password:</label>{% if form.password.errors %} <span class="error">{{ form.password.errors|join:", " }}</span>{% endif %}</dt>
+<dt><label for="id_password">密码:</label>{% if form.password.errors %} <span class="error">{{ form.password.errors|join:", " }}</span>{% endif %}</dt>
 <dd>{{ form.password }}</dd>
-<dt><input type="submit" value="Log in" /></dt>
+<dt><input type="submit" value="登陆" /></dt>
 </dl>
 </form>
 {% endblock %}
 
 {% block content-related %}
-<p>If you don't have an account, you can <a href="/accounts/register/">sign
-up</a> for one.
+<p>如果你没有账号，请点击<a href="/accounts/register/">注册</a> 。
 {% endblock %}
