--- a/server/d1/d1/templates/registration/logout.html
+++ b/server/d1/d1/templates/registration/logout.html
@@ -1,8 +1,8 @@
 {% extends "registration/base.html" %}
 
-{% block title %}Logged out{% endblock %}
+{% block title %}登出{% endblock %}
 
 {% block content %}
-<h1>You've been logged out.</h1>
-<p>Thanks for stopping by; when you come back, don't forget to <a href="/accounts/login/">log in</a> again.</p>
+<h1>你已成功登出</h1>
+<p>多谢光临本网站，下次光临请请重新<a href="/accounts/login/">登陆</a>。</p>
 {% endblock %}
