--- a/server/d1/vine_comment/templates/comments/comment_list_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_list_raw.html
@@ -3,26 +3,27 @@
 <!--
   function change_new_comment_num()
   {
-		 if (document.getElementById("new_button").innerHTML == "展开"){
-			document.getElementById("new_button").innerHTML  = "收起";
+ if (document.getElementById("new_button").innerHTML == "灞曞紑"){
+document.getElementById("new_button").innerHTML  = "鏀惰捣";
             $.get("/ajax/showmsg/new/comment/max",{})
             .done(function(data) {
               $('#commet_new').html(data);
             });
-			} else {
-			document.getElementById("new_button").innerHTML  = "展开";
+} else {
+document.getElementById("new_button").innerHTML  = "灞曞紑";
             $.get("/ajax/showmsg/new/comment/min", {})
             .done(function(data) {
               $('#commet_new').html(data);
             });
-		}
-		
-		//刷新
+}
+//鍒锋柊
   }
 </script>
 
 
 {% include 'comments/comments_plugin_hot.html' %}
 {% include 'comments/comments_plugin_new.html' %}
-<button id="new_button" style="float:right" type="button"  class = 'btn btn-sm btn-success'  onclick="change_new_comment_num();">展开</button>
+<button id="new_button" style="float:right" type="button"  class = 'btn btn-sm btn-success'  onclick="change_new_comment_num();">灞曞紑</button>
 {% include 'comments/comments_plugin_relevant.html' %}
+
+
