--- a/server/d1/vine_comment/templates/comments/comments_plugin_hot.html
+++ b/server/d1/vine_comment/templates/comments/comments_plugin_hot.html
@@ -1,97 +1,81 @@
 {% load humanize %}
 {% load avatar_tags %}
+  <script>
+    function expandReplyHot(id) {
+      if (!$('#replyDivHot'+id).is(':visible')) {
+        $('#replyDivHot'+id).show();
+        $.get("/ajax/reply/comment/"+id, {})
+        .done(function(data) {
+          $('#repliesofHot'+id ).html(data);
+        });
+      } else {
+        $('#replyDivHot'+id).hide();
+      }
+    }
+    function replyHot(id) {
+      var reply_str = $('#replyHot'+id).val();
+      $.post("/ajax/reply/comment/"+id, {'reply_str':reply_str})
+      .done(function(data) {
+        $('#repliesofHot'+id ).html(data);
+        $('#replyHot'+id).val('');
+        var reply_num = $('#reply_comment_hot'+id).find('span');
+        var count = parseInt(reply_num.text())+1;
+        reply_num.text(count);
+      });
+    }
+  </script>
 
-<script language="JavaScript">
-<!--
-  function change_hot_comment_num()
-  {
-		
-		if(document.getElementById("commetList_hot_min").style.display == ""){
-			document.getElementById("hot_button").innerHTML  = "收起";
-			document.getElementById("commetList_hot_max").style.display="";
-			document.getElementById("commetList_hot_min").style.display="none";
-			} else {
-			document.getElementById("hot_button").innerHTML  = "展开";
-			document.getElementById("commetList_hot_max").style.display="none";
-			document.getElementById("commetList_hot_min").style.display="";
-		}
-		
-		//刷新
-  }
--->
-</script>
+<div id="commet_hot">
+    <fieldset>
+      <legend>最热评论</legend>
+        <div id="commetList_hot">
+            <ul class="list-group">
+            {% for message in p_comment_hot.object_list %}
+                  <li class="list-group-item">
+                     <strong>{% if message.author %}{{ message.author.user }}{% else %}{{ message.author_ip }}{% endif %}</strong>
+                     
+                     <span style="float:right">
+                       <span class='comment-time'>提交于 {{ message.time_added|naturaltime }}</span>
+                     </span>
+                     <a href="{{message.comment_board.url}}" target="_blank">
+                       <span class="comment-text" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
+                     </a>
+                     <br/>
+                     <span style="float:right">
+                      <a href="javascript:void(0);" id="up_comment_{{message.id}}" onclick="up('{{message.id}}');return false;">
+                        {% if user.id in message.up_users %}
+                        <i class="fa fa-thumbs-up"></i>
+                        {% else %}
+                        <i class="fa fa-thumbs-o-up"></i>
+                        {% endif %}
+                        +<span>{{ message.up_users|length }}</span>
+                      </a>
+                      {# TODO: 添加tips，说明icon功能，不然留言icon字太小。 #}
+                      <a href="javascript:void(0);" id="reply_comment_hot{{message.id}}" onclick="expandReplyHot('{{message.id}}');return false;">
+                        <i class="fa fa-comments-o"></i>
+                        <span>{{ message.replies|length }}</span>
+                      </a>
+                     </span>
+                     <div id="detailDivHot{{message.id}}" style="display:none;margin-top:10px">
+                     </div>
 
-
-<fieldset>
-  <legend>最热评论</legend>
-	<div id="commetList_hot_max" style="display: none;">
-		<ul class="list-group">
-		{% for message in p_comment_hot_max.object_list %}
-			  <li class="list-group-item">
-				 <strong>{% if message.author %}{{ message.author.user }}{% else %}{{ message.author_ip }}{% endif %}</strong>
-				 
-				 <span style="float:right">
-				   <span class='comment-time'>提交于 {{ message.time_added|naturaltime }}</span>
-				 </span>
-				 <a href="{{message.comment_board.url}}" target="_blank">
-				   <span class="comment-text" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
-				 </a>
-				 <br/>
-				 <span style="float:right">
-				  <a href="javascript:void(0);" id="up_comment_{{message.id}}" onclick="up('{{message.id}}');return false;">
-					{% if user.id in message.up_users %}
-					<i class="fa fa-thumbs-up"></i>
-					{% else %}
-					<i class="fa fa-thumbs-o-up"></i>
-					{% endif %}
-					+<span>{{ message.up_users|length }}</span>
-				  </a>
-				  {# TODO: 添加tips，说明icon功能，不然留言icon字太小。 #}
-				  <a href="javascript:void(0);" id="reply_comment_{{message.id}}" onclick="expandReply('{{message.id}}');return false;">
-					<i class="fa fa-comments-o"></i>
-					<span>{{ message.replies|length }}</span>
-				  </a>
-				 </span>
-				 <br/>
-			  </li>
-		{% endfor %}
-		</ul>
-	</div>
-	
-	
-	<div id="commetList_hot_min" style="display:"";">
-		<ul class="list-group">
-		{% for message in p_comment_hot_min.object_list %}
-			  <li class="list-group-item">
-				 <strong>{% if message.author %}{{ message.author.user }}{% else %}{{ message.author_ip }}{% endif %}</strong>
-				 
-				 <span style="float:right">
-				   <span class='comment-time'>提交于 {{ message.time_added|naturaltime }}</span>
-				 </span>
-				 <a href="{{message.comment_board.url}}" target="_blank">
-				   <span class="comment-text" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
-				 </a>
-				 <br/>
-				 <span style="float:right">
-				  <a href="javascript:void(0);" id="up_comment_{{message.id}}" onclick="up('{{message.id}}');return false;">
-					{% if user.id in message.up_users %}
-					<i class="fa fa-thumbs-up"></i>
-					{% else %}
-					<i class="fa fa-thumbs-o-up"></i>
-					{% endif %}
-					+<span>{{ message.up_users|length }}</span>
-				  </a>
-				  {# TODO: 添加tips，说明icon功能，不然留言icon字太小。 #}
-				  <a href="javascript:void(0);" id="reply_comment_{{message.id}}" onclick="expandReply('{{message.id}}');return false;">
-					<i class="fa fa-comments-o"></i>
-					<span>{{ message.replies|length }}</span>
-				  </a>
-				 </span>
-				 <br/>
-			  </li>
-		{% endfor %}
-		</ul>
-	</div>	
-	
-	<button id="hot_button" style="float:right" type="button"  class = 'btn btn-sm btn-success'  onclick="change_hot_comment_num();">展开</button>
-</fieldset>
+                     <div id="replyDivHot{{message.id}}" style="display:none;margin-top:10px">
+                     <br>
+                       <div id="repliesofHot{{message.id}}">
+                       {% include 'reply.html' %}
+                       </div>
+                       <div name="reply{{message.id}}" class="input-group">
+                         <textarea rows="5" style="width:100%;height:34px;resize:none" id="reply{{message.id}}" name="reply" placeholder="可输入5-140个字"></textarea>
+                         <span class="input-group-btn">
+                           <button class="btn btn-default submitComment" data-loading-text="回复中" onclick="replyHot('{{message.id}}')" type="button">回复</button>
+                         </span>
+                       </div><!-- /input-group -->
+                     </div>
+                     <br>
+                  </li>
+            {% endfor %}
+            </ul>
+        </div>
+        
+    </fieldset>
+</div>
