--- a/server/d1/vine_comment/templates/comments/comment_list.html
+++ b/server/d1/vine_comment/templates/comments/comment_list.html
@@ -31,10 +31,10 @@
 </style>
 
 <div class='left'>
-    <button id="show_comment_bn" type="button" class='btn btn-info btn-block right-angle' onclick="show_comment();">评论</button>
+    <button id="show_comment_bn" type="button" class='btn btn-default btn-block right-angle' onclick="show_comment();">评论</button>
 </div>
 <div class='right'>
-    <button id="you_like_bn" type="button" class = 'btn btn-info btn-block right-angle'   onclick="show_you_like();">猜你喜欢</button>
+    <button id="you_like_bn" type="button" class = 'btn btn-default btn-block right-angle'   onclick="show_you_like();">猜你喜欢</button>
 </div>
 
 <div id="commetList" style="display:'';">
