--- a/server/d1/vine_comment/templates/comments/comment_list_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_list_raw.html
@@ -1,15 +1,18 @@
+{% load staticfiles %}
 
 <script>
   function change_new_comment_num()
   {
-		 if (document.getElementById("new_button").innerHTML == "展开"){
-			document.getElementById("new_button").innerHTML  = "收起";
+		 if (document.getElementById("new_button").value == "收起"){
+			document.getElementById("new_button").value  = "展开";
+            document.getElementById("new_img").src = "//{{ request.META.HTTP_HOST }}{% static 'icons/shouqi.jpg' %}"
             $.get("/ajax/showmsg/new/comment/max",{})
             .done(function(data) {
               $('#commet_new').html(data);
             });
 			} else {
-			document.getElementById("new_button").innerHTML  = "展开";
+			document.getElementById("new_button").value  = "收起";
+            document.getElementById("new_img").src = "//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}"
             $.get("/ajax/showmsg/new/comment/min", {})
             .done(function(data) {
               $('#commet_new').html(data);
@@ -21,14 +24,16 @@
   
   function change_hot_comment_num()
   {
-		 if (document.getElementById("hot_button").innerHTML == "展开"){
-			document.getElementById("hot_button").innerHTML  = "收起";
+		 if (document.getElementById("hot_button").value == "收起"){
+			document.getElementById("hot_button").value  = "展开";
+            document.getElementById("hot_img").src = "//{{ request.META.HTTP_HOST }}{% static 'icons/shouqi.jpg' %}"
             $.get("/ajax/showmsg/hot/comment/max",{})
             .done(function(data) {
               $('#commet_hot').html(data);
             });
 			} else {
-			document.getElementById("hot_button").innerHTML  = "展开";
+			document.getElementById("hot_button").value  = "收起";
+            document.getElementById("hot_img").src = "//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}"
             $.get("/ajax/showmsg/hot/comment/min", {})
             .done(function(data) {
               $('#commet_hot').html(data);
@@ -38,12 +43,17 @@
 </script>
 
 
+<style>
+.ha_bor{border:none;}
+</style>
+
+
 {% include 'comments/comments_plugin_hot.html' %}
-<button id="hot_button" style="float:right" type="button"  class = 'btn btn-sm btn-success'  onclick="change_hot_comment_num();">展开</button>
+<button id="hot_button" style="float:right" type="button"  class = 'btn btn-sm btn-default ha_bor'  onclick="change_hot_comment_num();" value="收起"><img id = "hot_img" src="//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}" /></button>
 <br>
 <br>
 {% include 'comments/comments_plugin_new.html' %}
-<button id="new_button" style="float:right" type="button"  class = 'btn btn-sm btn-success'  onclick="change_new_comment_num();">展开</button>
+<button id="new_button" style="float:right" type="button"  class = 'btn btn-sm btn-default ha_bor'  onclick="change_new_comment_num();"  value="收起"><img id = "new_img" src="//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}" /></button>
 <br>
 <br>
 {% include 'comments/comments_plugin_relevant.html' %}
