--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -52,8 +52,8 @@
 			{% else %}
 			  <li style="float:right">
 			  <div class='btn-group' class="spanright">
-				<a href="#" data-toggle="modal" data-target="#loginModal" class = 'btn btn-info'>登录</a>
-				<a href="#" data-toggle="modal" data-target="#registerModal" class = 'btn btn-info'>注册</a>
+				<a href="#" data-toggle="modal" data-target="#loginModal" class = 'btn btn-default'>登录</a>
+				<a href="#" data-toggle="modal" data-target="#registerModal" class = 'btn btn-default'>注册</a>
 			  </div>
 			  </li>
 			  <!-- 登录：Modal 弹出框 -->
