Modif CSS of Title
Modif CSS of Title

--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -31,8 +31,8 @@
           <li>
           <img src="//{{ request.META.HTTP_HOST }}{% static 'icons/vine-comment.jpg' %}" />
           </li>
-          <li>
-			<h3>藤蔓评论</h3>
+          <li style="width:60%; text-align:center;" >
+			<td style="FILTER: glow(color=#B4BBCF,strength=5)" align="center" ><font face="黑体" color="#8C96B5" size="6"><b>藤蔓评论</b></font></td>
 		  </li>
 		  <li>
 			{% if user.is_authenticated %}
