--- a/server/d1/d1/templates/registration/registration_complete_simple.html
+++ b/server/d1/d1/templates/registration/registration_complete_simple.html
@@ -5,6 +5,14 @@
 {% block content %}
 {% load staticfiles %}
 <script src="{% static 'jquery/2.0.3/jquery.min.js' %}"></script>
+<script src="/static/js/btoa.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+	if (!window.btoa) window.btoa = base64.encode;
+	$.support.cors = true;
+	$('a').prop("href", "/comment/" + btoa(document.location));
+});
+</script>
 <h1>Check your email</h1>
 <p>An activation link has been sent to the email address you supplied, along with instructions for activating your account.</p>
 <a href="/">Back to vine comments<a>
