Add home page in extension

--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -47,6 +47,7 @@
 				</li>
 			  {% endfor %}
 				<li><a href="/logout/">normal logout</a></li>
+				<li><a href="/home/simple">Home Page</a></li>
 				</ul>
 			  </li>
 			{% else %}
