reg comp: update

--- a/server/d1/d1/templates/registration/registration_complete.html
+++ b/server/d1/d1/templates/registration/registration_complete.html
@@ -4,8 +4,12 @@
 
 {% block content %}
 {% load staticfiles %}
+<div class="panel panel-default">
+<div class="panel-body">
 <script src="{% static 'jquery/2.0.3/jquery.min.js' %}"></script>
 <h1>Check your email</h1>
 <p>An activation link has been sent to the email address you supplied, along with instructions for activating your account.</p>
 <a href="/">Back to vine comments<a>
+</div>
+</div>
 {% endblock %}
