--- a/server/d1/vine_comment/templates/comments/comment_list_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_list_raw.html
@@ -40,7 +40,44 @@
             });
 		}
   }
+  
+    function change_new_comment_num_new()
+  {
+		 if (document.getElementById("new_button").innerHTML == "展开"){
+			document.getElementById("new_button").innerHTML =  "收起";
+            $.get("/ajax/showmsg/new/comment/max",{})
+            .done(function(data) {
+              $('#commet_new').html(data);
+            });
+			} else {
+			document.getElementById("new_button").innerHTML =  "展开";
+            $.get("/ajax/showmsg/new/comment/min", {})
+            .done(function(data) {
+              $('#commet_new').html(data);
+            });
+		}
+		
+		//刷新
+  }
+  
+  function change_hot_comment_num_new()
+  {
+		 if (document.getElementById("hot_button").innerHTML  == "展开"){
+			document.getElementById("hot_button").innerHTML =  "收起";
+            $.get("/ajax/showmsg/hot/comment/max",{})
+            .done(function(data) {
+              $('#commet_hot').html(data);
+            });
+			} else {
+			document.getElementById("hot_button").innerHTML =  "展开";
+            $.get("/ajax/showmsg/hot/comment/min", {})
+            .done(function(data) {
+              $('#commet_hot').html(data);
+            });
+		}
+  }  
 </script>
+
 
 
 <style>
@@ -49,11 +86,17 @@
 
 
 {% include 'comments/comments_plugin_hot.html' %}
-<button id="hot_button" style="float:right" type="button"  class = 'btn btn-sm btn-default ha_bor'  onclick="change_hot_comment_num();" value="收起"><img id = "hot_img" src="//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}" /></button>
+<!--
+<button id="hot_button" style="float:right" type="button"  class = 'btn btn-sm btn-link ha_bor'  onclick="change_hot_comment_num();" value="收起"><img id = "hot_img" src="//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}" /></button>
+-->
+<button id="hot_button" style="float:right" type="button"  class = 'btn btn-sm btn-link '  onclick="change_hot_comment_num_new();">展开</button>
 <br>
 <br>
 {% include 'comments/comments_plugin_new.html' %}
+<!--
 <button id="new_button" style="float:right" type="button"  class = 'btn btn-sm btn-default ha_bor'  onclick="change_new_comment_num();"  value="收起"><img id = "new_img" src="//{{ request.META.HTTP_HOST }}{% static 'icons/zhankai.jpg' %}" /></button>
+-->
+<button id="new_button" style="float:right" type="button"  class = 'btn btn-sm btn-link '  onclick="change_new_comment_num_new();"  >展开</button>
 <br>
 <br>
 {% include 'comments/comments_plugin_relevant.html' %}
