OK, move the link to home page

--- a/server/d1/vine_comment/templates/home_raw.html
+++ b/server/d1/vine_comment/templates/home_raw.html
@@ -75,6 +75,7 @@
 </div>
 </header>
 
+<a href="/comment/{{url_b64}}/simple"><<回到藤蔓评论</a>
 {% include 'comments_list.html' %}
 
 <ul class='pagination'>
