template: update title of base.html, consider to use a var

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -7,7 +7,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>藤蔓评论 - 发现更大的世界</title>
+  <title>首页 - 藤蔓评论</title>
   <link href="{% static 'favicon/favicon.ico' %}" type="image/x-icon" rel="shortcut icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
