--- a/server/d1/vine_comment/templates/home_raw.html
+++ b/server/d1/vine_comment/templates/home_raw.html
@@ -8,8 +8,8 @@
 
     <div id="user-info-view" class="col-md-2 col-xs-3 pull-left">
       <div class="avatar-wrapper">
-        <!--a onclick="showForm(this, 'picForm')" title="更换头像" href='#'-->
-        <a href="{% url 'avatar_change' %}" title="更换头像">
+        <a onclick="changeAvatar(event)" title="更换头像" href='#'>
+        <!--a href="{% url 'avatar_change' %}" title="更换头像"-->
           <div class="avatar-image-container">
             {% avatar user %}
           </div>
@@ -94,6 +94,9 @@
   {% endif %}
 </ul>
 
+<div id="overlay"></div>
+<div id="popup"></div>
+
 <script src="http://cdn.jsdelivr.net/jquery.knob/1.2.2/jquery.knob.min.js"></script>
 
 <script>
@@ -117,4 +120,50 @@ function showForm(me, id) {
     $('#'+id).show();
   }
 };
+
+function changeAvatar(e) {
+   //TODO on edge of the page
+   var x = e.clientX;
+   var y = e.clientY;
+   $('#overlay').show()
+   $('#popup').html('<a herf="#"><i class="fa fa-times-circle" style="float:right;cursor:pointer" onclick="cancelPopup()"></i></a>'+
+                    '<p id="loading">Loading...</p>')
+                   .css({'left':x+'px','top':y+'px'}).show();
+   $.get("{% url 'avatar_change' %}", function(data){
+     $('#loading').remove();
+     $('#popup').append('<div style="margin-left:10px">'+data+'</div>');
+   });
+ };
+
+ function cancelPopup() {
+   $('#popup').hide();
+   $('#overlay').hide();
+ };
+
 </script>
+<style>
+#overlay {
+   display:none;
+   position:fixed;
+   left:0px;
+   top:0px;
+   width:100%;
+   height:100%;
+   background:#000;
+   opacity:0.5;
+   z-index:99999;
+}
+
+#popup {
+   display:none;
+   position:fixed;
+   left:50%;
+   top:50%;
+   width:350px;
+   margin-top:10px;
+   margin-left:10px;
+   background:#FFFFFF;
+   border:1px solid blue;
+   z-index:100000;
+}
+</style>
