Site page should not jump to url belong to extension

--- a/server/d1/vine_comment/templates/home_raw.html
+++ b/server/d1/vine_comment/templates/home_raw.html
@@ -75,7 +75,9 @@
 </div>
 </header>
 
-<a href="/comment/{{url_b64}}/simple"><<回到藤蔓评论</a>
+{% if flag %}
+<a href="/comment/{{url_b64}}/"><<回到藤蔓评论</a>
+{% endif %}
 {% include 'comments_list.html' %}
 
 <ul class='pagination'>
